...
                    "Password",
                    KeyboardType.Password,
                    PasswordVisualTransformation(),
                    inputState = password
                )
                TextFieldView(
                    "Password Confirm",
                    KeyboardType.Password,
                    PasswordVisualTransformation(),
                    anotherInputState = password
                )
                SingUpButtonView(
                    Modifier.padding(16.dp)
...
